multiuser: New implementation of su.

We're still using the (now-deprecated) coreutils su, so this is
a replacement for that. It functions almost equivalently,
and supports the major arguments (-l, -c).

(Note that login/su to a non-root user is presently busted, though.
See #13583.)